# awatch

./: CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  awatch_test.c
st7789_sdi/: CMakeLists.txt  font5x7.c  font5x7.h  fonts.c  fonts.h  icons.c  icons.h  seralInput.txt  st7789_draw.c  st7789_draw.h  st7789_init.c  st7789_init.h  style.c  style.h  wifi_conn.c  wifi_conn.h
